hydroflow/tests/compile-fail/surface_badgeneric_type.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        // no generic arguments for `inspect`.
        source_iter(0..10) -> inspect::<usize>(std::mem::drop) -> for_each(std::mem::drop);
    };
    df.run_available();
}
